--- a/styles/index.css
+++ b/styles/index.css
@@ -23,6 +23,7 @@
   --accent: #303030;
   --icon-size: clamp( 1rem, 3vw, 2rem );
   --font-size: clamp( 1rem, 1vw, 2rem );
+  --trans: 50%;
 }
 
 body {
